# koho

./: Cargo.toml  README.md
.github/workflows/: rust.yaml  tests.yaml
src/: error.rs  lib.rs
src/math/: cell.rs  sheaf.rs  tensors.rs
src/nn/: diffuse.rs  metrics.rs  mod.rs
src/nn/optim/: adam.rs  mod.rs  rmsprop.rs  sgd.rs
