[package]

authors = ["Mesocarp"]
description = "A deep learning model for spectral diffusion over k-cells in arbitrary cell complexes, built on `candle`"
edition = "2021"
homepage = "https://github.com/TheMesocarp/koho"
keywords = [
  "machine learning",
  "deep learning",
  "spectral diffusion",
  "sheaf neural networks",
  "topological data analysis",
]
license = "AGPL-3.0"
name = "koho"
readme = "README.md"
repository = "https://github.com/TheMesocarp/koho"
version = "0.1.0"


[dependencies]
thiserror = "2.0.12"
num-complex = "0.4.6"
rand = "0.9.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
