[package]

authors = ["Mesocarp"]
description = "A deep learning model for spectral diffusion over k-cells in arbitrary cell complexes, built on `candle`"
edition = "2021"
homepage = "https://github.com/TheMesocarp/koho"
keywords = [
  "ml",
  "deep_learning",
  "spectral_diffusion",
  "sheaves",
  "TDA",
]
license = "AGPL-3.0"
name = "koho"
readme = "README.md"
repository = "https://github.com/TheMesocarp/koho"
version = "0.1.0"


[dependencies]
thiserror = "2.0.12"
rand = "0.9.0"
candle-core = "0.9.1"
candle-nn = "0.9.1"
